--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,9 @@
         <version>3.12.0</version>
         <reportSets>
           <reportSet>
+            <configuration>
+              <overview>${project.basedir}/src/main/javadoc/overview.html</overview>
+            </configuration>
             <reports>
               <report>javadoc</report>
             </reports>
